Добавление кликабольности ячеек в таблице

--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -12,3 +12,14 @@ td {
     font-weight: normal;
     font-family: arial;
 }
+td a {
+    text-decoration: none;
+
+}
+td p{
+    width: 100%
+}
+.title {
+    font-size: 25px;
+
+}
