Исправление багов (Я не успел)

--- a/app/templates/Информация о ячейке.html
+++ b/app/templates/Информация о ячейке.html
@@ -5,6 +5,11 @@
     <title>Title</title>
 </head>
 <body>
-
+<div id="place">
+    <div style="n"></div>
+    <div style="n"></div>
+    <div style="n"></div>
+    <div style="n"></div>
+</div>
 </body>
 </html>
