--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,126 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
+{% extends 'base.html' %}
 <head>
+    {% block head %}
     <meta charset="UTF-8">
     {{ turbo() }}
     <title>Главная</title>
-    <script src="https://cdn.anychart.com/js/latest/anychart-bundle.min.js"></script>
-    <link type="text/css" rel="stylesheet" , href="static/css/table.css">
-    <link type="text/css" rel="stylesheet" , href="static/css/base.css">
-    <script>
+
+
+    {% endblock %}
+
+</head>
+<body>
+{% block content %}
+<script>
 anychart.onDocumentLoad(function() {
 
   var chart = anychart.line([
-  {% for n in range(24) %}
+  {% for n in range(len(graph)) %}
     {x: {{n}}, value: {{graph[n]}}},
   {% endfor %}
   ]);
   chart.title("Граффик объёма выпуска продукции за день");
   chart.container("container").draw();
 });
-    </script>
-</head>
-<body>
-<ul>
-    <li>
-        <span>Работает ячеек {{production_data["status"]['work'][0]}}</span>
-    </li>
-    <li>
-        <span>Выключено ячеек {{production_data["status"]['off'][0]}}</span>
-    </li>
-    <li>
-        <span>Ячеек в состоянии ошибки {{production_data["status"]['error'][0]}}</span>
-    </li>
-    <li>
-        <span>Ячеек в состоянии ожидания {{production_data["status"]['wait'][0]}}</span>
-    </li>
-</ul>
-{% if production_data["speed"] %}
-<p>Скорость изготовления: {{production_data["speed"]}} деталей в час</p>
-
-{% else %}
-<p>Скорость изготовления: неизвестно</p>
-{% endif %}
 
 
-{% if production_data["all_speed"] %}
-<p>Общий объём выпуска готовой продукции: {{production_data["all_speed"]}} деталей </p>
-
-{% else %}
-<p>Общий объём выпуска готовой продукции: неизвестно</p>
-{% endif %}
-{% if production_data["bad"] %}
-<p>Процент брака: {{production_data["bad"]}}% деталей за день </p>
-{% else %}
-<p>Процент брака: неизвестно</p>
-{% endif %}
-{% if production_data["work_procent"] %}
-<p>Средняя загрузка оборудования: {{ production_data["work_procent"] }}% </p>
-{% else %}
-<p>Средняя загрузка оборудования: неизвестно</p>
-{% endif %}
-<div style="width: 500px;height: 400px" id="container"></div>
-<span class="title">Информация о ячейках</span>
-<table>
-    <tr>
-        <th>Номер ячейки</th>
-        <th>Название ячейки</th>
-        <th>Состояние ячейки</th>
-        <th>Состояние ожтдания</th>
-        <th>Количество обработанных заготовок за час</th>
-        <th>Количество обработанных заготовок за день</th>
-        <th>Загрузка за последний час</th>
-        <th>Загрузка за текущий день</th>
-    </tr>
-    {% for cell in table_data %}
-
-    <tr>
-        <td>
-            <a href="{{url_for('cell_info', cell=cell['index'])}}">
-                <p>{{cell["index"]}}</p>
-            </a>
-        </td>
-        <td>
-            <a href="{{url_for('cell_info', cell=cell['index'])}}">
-                <p>{{cells_names[cell["index"]]}}</p>
-            </a>
-        </td>
-        <td>
-            <a href="{{url_for('cell_info', cell=cell['index'])}}">
-                <p>{{cell["status"]}}</p>
-            </a>
-        </td>
-        <td>
-            <a href="{{url_for('cell_info', cell=cell['index'])}}">
-                <p>{{cell["wait"]}}</p>
-            </a>
-        </td>
-        <td>
-            <a href="{{url_for('cell_info', cell=cell['index'])}}">
-                <p>{{cell["speed_hour"]}} деталей</p>
-            </a>
-        </td>
-        <td>
-            <a href="{{url_for('cell_info', cell=cell['index'])}}">
-                <p>{{cell["speed_day"]}} деталей</p>
-            </a>
-        </td>
-        <td>
-            <a href="{{url_for('cell_info', cell=cell['index'])}}">
-                <p>{{cell["work_hour"]}}%</p>
-            </a>
-        </td>
-        <td>
-            <a href="{{url_for('cell_info', cell=cell['index'])}}">
-                <p>{{cell["work_day"]}}%</p>
-            </a>
-        </td>
 
 
-    </tr>
 
-    {% endfor %}
-</table>
+</script>
+<div class="content">
+    <span class="title">Главная страница</span>
+    <table class="main-info">
+        <tr class="title">
+            <th>Работает ячеек</th>
+            <th>Выключено ячеек</th>
+            <th>Ячеек в состоянии ошибки</th>
+            <th>Ячеек в состоянии ожидания</th>
+        </tr>
+        <tr class="value">
+            <th>{{production_data["status"]['work'][0]}}</th>
+            <th>{{production_data["status"]['off'][0]}}</th>
+            <th>{{production_data["status"]['error'][0]}}</th>
+            <th>{{production_data["status"]['wait'][0]}}</th>
+        </tr>
+    </table>
+
+    <div class="main">
+        {% if production_data["speed"] %}
+        <p>Скорость изготовления: {{production_data["speed"]}} деталей в час</p>
+
+        {% else %}
+        <p>Скорость изготовления: неизвестно</p>
+        {% endif %}
+
+
+        {% if production_data["all_speed"] %}
+        <p>Общий объём выпуска готовой продукции: {{production_data["all_speed"]}} деталей </p>
+
+        {% else %}
+        <p>Общий объём выпуска готовой продукции: неизвестно</p>
+        {% endif %}
+        {% if production_data["bad"] %}
+        <p>Процент брака: {{production_data["bad"]}}% деталей за день </p>
+        {% else %}
+        <p>Процент брака: неизвестно</p>
+        {% endif %}
+        {% if production_data["work_procent"] %}
+        <p>Средняя загрузка оборудования: {{ production_data["work_procent"] }}% </p>
+        {% else %}
+        <p>Средняя загрузка оборудования: неизвестно</p>
+        {% endif %}
+    </div>
+    <div style="width: 500px;height: 400px" id="container"></div>
+    <span class="title">Информация о ячейках</span>
+    <a href="{{url_for('monitor')}}">
+        <table class="data">
+            <tr>
+                <th>Номер ячейки</th>
+                <th>Название ячейки</th>
+                <th>Состояние ячейки</th>
+                <th>Состояние ожтдания</th>
+                <th>Количество обработанных заготовок за час</th>
+                <th>Количество обработанных заготовок за день</th>
+                <th>Загрузка за последний час</th>
+                <th>Загрузка за текущий день</th>
+            </tr>
+            {% for cell in table_data %}
+            <tr>
+                <td><p>{{cell["index"]}}</p></td>
+                <td><p>{{cells_names[cell["index"]]}}</p></td>
+                <td><p>{{cell["status"]}}</p></td>
+                <td><p>{{cell["wait"]}}</p></td>
+                <td><p>{{cell["speed_hour"]}} деталей</p></td>
+                <td><p>{{cell["speed_day"]}} деталей</p></td>
+                <td><p>{{cell["work_hour"]}}%</p></td>
+                <td><p>{{cell["work_day"]}}%</p></td>
+            </tr>
+            {% endfor %}
+        </table>
+    </a>
+    {% endblock %}
+</div>
 
 </body>
 </html>
