--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,12 +4,13 @@
 <head>
 
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!--"/static/css/build_cms_front.css"-->
     <link rel="stylesheet" type="text/css"
           href="static/css/build_cms_front.css">
 
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
 
     <link rel="stylesheet" type="text/css" href="/static/css/base.css">
     <script src="/static/js/jquery.js"></script>
@@ -25,9 +26,11 @@
 <body data-template="bruno2"
       class="f__preset-box f__site f__2 loading locale_ru bruno2 mod--search-disable mod--img-logo mod--header-static mod--menu-action-on-scroll mod--menu-static-on-scroll desktop adaptive-desktop mod--horizontal-menu mod--infoline-disable js--loading-cascade mod--font-none-preset layout-logo-left--by-logo "
       data-preview="">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.min.js" integrity="sha384-heAjqF+bCxXpCWLa6Zhcp4fu20XoNIA98ecBC1YkdXhszjoejr5y9Q77hIrv8R9i" crossorigin="anonymous"></script>
 <div class="l-wrap js-wrap">
 
-    <hr>
     {% with messages = get_flashed_messages() %}
     {% if messages %}
     <ul>
@@ -39,22 +42,23 @@
     {% endwith %}
 
 
-    <div class="nav-menu">
-
-        <div class="nav-menu-item">
-            <nav>
-                <ul class="topmenu">
-
-                    <li><a href="{{url_for('index')}}">ГЛАВНАЯ</a>
-                    <li><a href="{{url_for('monitor')}}">ОНЛАЙН МОНИТОР</a>
-
-                </ul>
-            </nav>
-
-
-        </div>
-
+    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top" style="background-color: #bdbdf2!important;">
+  <div class="container-fluid">
+    <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+      <ul class="nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{{url_for('index')}}"  style="color:black;">ГЛАВНАЯ</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{{url_for('monitor')}}"   style="color:black;">ОНЛАЙН МОНИТОР</a>
+        </li>
+      </ul>
     </div>
+  </div>
+</nav>
+    <br>
+    <br>
+    <br>
 
     {% block content %}{% endblock %}
 </div>
