Другие страницы и навигация

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -47,6 +47,8 @@
 
                     <li><a href="{{url_for('index')}}">ГЛАВНАЯ</a>
                     <li><a href="{{url_for('monitor')}}">ОНЛАЙН МОНИТОР</a>
+                    <li><a href="{{url_for('op_panel')}}">ПАНЕЛЬ ОПЕРАТОРА</a>
+
 
                 </ul>
             </nav>
