--- a/app/templates/Информация о ячейке.html
+++ b/app/templates/Информация о ячейке.html
@@ -28,6 +28,8 @@
     });
 
 
+
+
     </script>
 
     {% endblock %}
@@ -84,9 +86,9 @@
     </div>
     <div style="width: 500px;height: 400px" id="container"></div>
 
-        <div style="width:500px" class="p-2">
-            <canvas id="myChart" width="400" height="400">
-                <script>
+    <div style="width:500px" class="p-2">
+        <canvas id="myChart" width="400" height="400">
+            <script>
 var ctx = document.getElementById('myChart').getContext('2d');
 var myChart = new Chart(ctx, {
     type: 'pie',
@@ -122,53 +124,64 @@ var myChart = new Chart(ctx, {
 
 
 
-                </script>
-            </canvas>
-        </div>
-        <table>
-            <tr>
-                <th>Состояние</th>
-                <th>Время нахождения в этом состоянии за текущий день</th>
-                <th>Процент времени нахождения в этом состоянии за текущий день</th>
-                <th>Время нахождения в этом состоянии за последний час</th>
-                <th>Процент времени нахождения в этом состоянии за последний час</th>
 
-            </tr>
-            {% for cell in table_data1 %}
-            <tr>
-                <td><p>{{cell["status"]}}</p></td>
-                <td><p>{{cell["time_day"]}} секунд</p></td>
-                <td><p>{{cell["time_day_procent"]}}%</p></td>
-                <td><p>{{cell["time_hour"]}} секунд </p></td>
-                <td><p>{{cell["time_hour_procent"]}}%</p></td>
 
-            </tr>
-            {% endfor %}
-        </table>
-        <table>
-            <tr>
-                <th>Состояние</th>
-                <th>Время нахождения в этом состоянии за текущий день</th>
-                <th>Процент времени нахождения в этом состоянии за текущий день</th>
-                <th>Время нахождения в этом состоянии за последний час</th>
-                <th>Процент времени нахождения в этом состоянии за последний час</th>
+            </script>
+        </canvas>
+    </div>
+    <table>
+        <tr>
+            <th>Состояние</th>
+            <th>Время нахождения в этом состоянии за текущий день</th>
+            <th>Процент времени нахождения в этом состоянии за текущий день</th>
+            <th>Время нахождения в этом состоянии за последний час</th>
+            <th>Процент времени нахождения в этом состоянии за последний час</th>
 
-            </tr>
-            {% for cell in table_data2 %}
-            <tr>
-                <td><p>{{cell["wait"]}}</p></td>
-                <td><p>{{cell["time_day"]}} секунд</p></td>
-                <td><p>{{cell["time_day_procent"]}}%</p></td>
-                <td><p>{{cell["time_hour"]}} секунд </p></td>
-                <td><p>{{cell["time_hour_procent"]}}%</p></td>
+        </tr>
+        {% for cell in table_data1 %}
+        <tr>
+            <td><p>{{cell["status"]}}</p></td>
+            <td><p>{{cell["time_day"]}} секунд</p></td>
+            <td><p>{{cell["time_day_procent"]}}%</p></td>
+            <td><p>{{cell["time_hour"]}} секунд </p></td>
+            <td><p>{{cell["time_hour_procent"]}}%</p></td>
 
-            </tr>
-            {% endfor %}
-        </table>
+        </tr>
+        {% endfor %}
+    </table>
+    <table>
+        <tr>
+            <th>Состояние</th>
+            <th>Время нахождения в этом состоянии за текущий день</th>
+            <th>Процент времени нахождения в этом состоянии за текущий день</th>
+            <th>Время нахождения в этом состоянии за последний час</th>
+            <th>Процент времени нахождения в этом состоянии за последний час</th>
 
-        <div style="width:500px" class="p-2">
-            <canvas id="myChart2" width="400" height="400">
-                <script>
+        </tr>
+        {% for cell in table_data2 %}
+        <tr>
+            <td><p>{{cell["wait"]}}</p></td>
+            <td><p>{{cell["time_day"]}} секунд</p></td>
+            <td><p>{{cell["time_day_procent"]}}%</p></td>
+            <td><p>{{cell["time_hour"]}} секунд </p></td>
+            <td><p>{{cell["time_hour_procent"]}}%</p></td>
+
+        </tr>
+        {% endfor %}
+    </table>
+    <table>
+        <tr>
+            <th>Причина простоя</th>
+            <th>Суммарное время простоя за текущий день</th>
+            <th>Процент времени простоя за текущий день</th>
+
+
+        </tr>
+
+    </table>
+    <div style="width:500px" class="p-2">
+        <canvas id="myChart2" width="400" height="400">
+            <script>
 var ctx = document.getElementById('myChart2').getContext('2d');
 var myChart = new Chart(ctx, {
     type: 'pie',
@@ -204,12 +217,14 @@ var myChart = new Chart(ctx, {
 
 
 
-                </script>
-            </canvas>
-        </div>
 
 
-{% endblock %}
+            </script>
+        </canvas>
+    </div>
+
+
+    {% endblock %}
 </div>
 
 
