not final, fixes

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -64,14 +64,19 @@ anychart.onDocumentLoad(function() {
         <p>Общий объём выпуска готовой продукции: неизвестно</p>
         {% endif %}
         {% if production_data["bad"] %}
+        <p>Количество бракованных заготовок за текущий день: {{brak}} деталей за день </p>
+        {% else %}
+        <p>Количество бракованных заготовок за текущий день: неизвестно</p>
+        {% endif %}
+        {% if production_data["bad"] %}
         <p>Процент брака: {{production_data["bad"]}}% деталей за день </p>
         {% else %}
         <p>Процент брака: неизвестно</p>
         {% endif %}
         {% if production_data["work_procent"] %}
-        <p>Средняя загрузка оборудования: {{ production_data["work_procent"] }}% </p>
+        <p>Средняя загрузка оборудования за час: {{ production_data["work_procent"] }}% </p>
         {% else %}
-        <p>Средняя загрузка оборудования: неизвестно</p>
+        <p>Средняя загрузка оборудования за час: неизвестно</p>
         {% endif %}
     </div>
     <br>
