--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -63,10 +63,11 @@ anychart.onDocumentLoad(function() {
         <p>Общий объём выпуска готовой продукции: неизвестно</p>
         {% endif %}
         {% if production_data["bad"] %}
-        <p>Процент брака: {{production_data["bad"]}}% деталей за день </p>
+        <p>Процент брака: {{production_data["bad_pr"]}}% деталей за день </p>
         {% else %}
         <p>Процент брака: неизвестно</p>
         {% endif %}
+
         {% if production_data["work_procent"] %}
         <p>Средняя загрузка оборудования: {{ production_data["work_procent"] }}% </p>
         {% else %}
@@ -76,14 +77,14 @@ anychart.onDocumentLoad(function() {
     <div style="width: 500px;height: 400px" id="container"></div>
     <span class="title">Информация о ячейках</span>
 
-    <a href="{{url_for('monitor')}}">
+
 
         <table class="data">
             <tr>
                 <th>Номер ячейки</th>
                 <th>Название ячейки</th>
                 <th>Состояние ячейки</th>
-                <th>Состояние ожтдания</th>
+                <th>Состояние ожидания</th>
                 <th>Количество обработанных заготовок за час</th>
                 <th>Количество обработанных заготовок за день</th>
                 <th>Загрузка за последний час</th>
@@ -92,7 +93,7 @@ anychart.onDocumentLoad(function() {
             {% for cell in table_data %}
             <tr>
                 <td><p>{{cell["index"]}}</p></td>
-                <td><p>{{cells_names[cell["index"]]}}</p></td>
+                <td><a href="{{url_for('cell_info', index=cell['index'])}}"><p>{{cells_names[cell["index"]]}}</p></a></td>
                 <td><p>{{cell["status"]}}</p></td>
                 <td><p>{{cell["wait"]}}</p></td>
                 <td><p>{{cell["speed_hour"]}} деталей</p></td>
@@ -102,7 +103,7 @@ anychart.onDocumentLoad(function() {
             </tr>
             {% endfor %}
         </table>
-    </a>
+
     {% endblock %}
 </div>
 
