--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,7 +10,6 @@
           href="static/css/build_cms_front.css">
 
 
-
     <link rel="stylesheet" type="text/css" href="/static/css/base.css">
     <script src="/static/js/jquery.js"></script>
 
@@ -20,6 +19,12 @@
 
     <link type="text/css" rel="stylesheet" href="static/css/page.css">
     <link type="text/css" rel="stylesheet" href="static/css/index.css">
+    <script>
+        setTimeout(function(){
+	location.reload();
+}, 5000);
+
+    </script>
     {% block head %}{% endblock %}
 </head>
 <body data-template="bruno2"
